super minor edit in post.css to fix truncation

--- a/styles/post.css
+++ b/styles/post.css
@@ -359,6 +359,7 @@ nav {
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 2;
     display: -webkit-box;
+    word-break: break-word;
 }
 
 .justify {
